Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -387,7 +387,7 @@
     "dateentry-wildcard-info": "Kopfzeilen Datum  der Buchung",
     "day": "Tag",
     "days": "Tage",
-    "days-log-retention": "Tage Aufbewahrung von Logs",
+    "days-log-retention": "Tage Log-Aufbewahrung",
     "days-until-expiration": "Tage bis Ablauf",
     "db-host": "Dades Datenbankserver",
     "db-name": "Name Datenbank",
@@ -535,7 +535,7 @@
     "equivalent-account-not-found": "Konnte in Übung 1 kein äquivalentes Konto zu 0 finden <a href='2'> Haben Sie den Kontenplan importiert? <\/a>",
     "equivalent-subaccount-not-found": "Es wurde kein Unterkonto zum Kopieren gefunden, das 0 entspricht.",
     "error": "ERROR: %1$s",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Fehler beim Überprüfen der Nummer '%vat-number%' im VIES-System",
     "error-connecting-memcache": "Fehler beim Verbinden mit dem Memcache-Server.",
     "error-deleting-lines": "Fehler beim Zeilen löschen",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -755,10 +755,10 @@
     "inactive": "inaktiv",
     "income-and-expenses": "Income and Expenses",
     "incompatible-document": "incompatible-document",
-    "incompatible-with-facturascripts": "Incompatible with FacturaScripts %version%",
+    "incompatible-with-facturascripts": "Inkompatibel mit FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Info",
-    "infostate-component-title": "Status Information",
+    "infostate-component-title": "Statusinformation",
     "initial-number": "Anfangsnummer",
     "insert-update": "Einfügen oder aktualisieren",
     "installed": "installiert",
@@ -780,10 +780,10 @@
     "invalid-iso-code": "C",
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Ungültige Berechtigung: %permission%. Die verfügbaren Berechtigungen sind access, delete, export, import, update und only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "Rechnung",
-    "invoice-email-subject": "invoice-email-subject",
+    "invoice-email-subject": "Rechnungs-E-Mail Betreff",
     "invoice-email-text": "Hallo, als Anlage Ihre Rechnung %code%",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
     "invoice-have-rectifying-cant-delete": "Die Rechnung hat bereits eine Berichtigung. Kann nicht gelöscht werden.",
@@ -818,7 +818,7 @@
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Juli",
-    "june": "Junio",
+    "june": "Juni",
     "justified": "justified",
     "key-google-maps": "Google Maps Schlüssel",
     "keys": "Schlüssel",
@@ -925,13 +925,13 @@
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
     "manufacturers": "Hersteller",
-    "march": "M",
+    "march": "März",
     "margin": "Rand",
     "margin-top": "Rand oben",
     "mark-as-homepage": "Als Startseite markieren",
     "marked-as-homepage": "Als Homepage markiert",
     "max-input-vars-warning": "max-input-vars-warning",
-    "max-risk": "max-risk",
+    "max-risk": "Höchstes Risiko",
     "maximum-amount-with-cifnif": "Maximalbetrag mit CIF\/NIF",
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
@@ -999,11 +999,11 @@
     "negative-balance": "negative-balance",
     "net": "Netz",
     "new": "Neu",
-    "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
+    "new-acc-entry-line-p": "Sie können eine Zeile eingeben, indem Sie den Unterkontencode eingeben oder auf die Unterkonten-Schaltfläche klicken und ein Unterkonto auswählen.",
     "new-address": "Neue Übersetzung",
     "new-customer": "neuer Kunde",
     "new-customers": "new-customers",
-    "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
+    "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
     "new-price": "new-price",
     "new-refund": "new-refund",
@@ -1065,7 +1065,7 @@
     "open-exercise": "open-exercise",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Opened",
-    "opening-acounting-completed": "opening-acounting-completed",
+    "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Apertura",
     "operation": "Operation",
     "operator": "Operador",
@@ -1132,12 +1132,12 @@
     "percentage-surcharge": "% Zuschlag",
     "percentage-vat": "% MwSt",
     "period": "Periode",
-    "personalized": "Personalizado",
+    "personalized": "Personalisiert",
     "phase": "Fase",
     "phone": "Telefon",
     "phone2": "Telefon 2",
     "phones": "Telefonnummern",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "PHP-Endsupport",
     "physical-stock": "Physischer Bestand",
@@ -1236,7 +1236,7 @@
     "read-more": "Leer más",
     "readonly": "readonly",
     "rebuild": "rebuild",
-    "rebuild-completed": "rebuild-completed",
+    "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
@@ -1249,7 +1249,7 @@
     "recreate-system-integrity": "Systemintegrität wiederherstellen",
     "rectified-invoice": "Korrekturrechnung",
     "rectified-invoice-p": "Rechnungen sind Handelsdokumente und unterliegen bestimmten gesetzlichen Beschränkungen. Sie können nicht gelöscht oder geändert werden. Nur vollständige oder teilweise Rücksendungen sind möglich. Verwenden Sie dieses Formular, um eine Rücksendung für diese Rechnung zu erstellen.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Berichtigte Rechnungen",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Korrekturserie",
     "redirect": "Weiterleitung",
@@ -1275,7 +1275,7 @@
     "reloading": "Neuladen",
     "remove-filter": "Filter löschen",
     "remove-from-list": "Löschen",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Entfernen von Protokollen bis zum %date%",
     "renew": "Erneuern",
     "renumber": "Umbenennen",
     "renumber-accounting": "Buchungen neu nummerieren",
@@ -1305,7 +1305,7 @@
     "retention": "retention",
     "retentions": "Retentions",
     "review-date": "Prüfungsdatum",
-    "right": "Right",
+    "right": "Rechts",
     "risky-customer": "risky-customer",
     "rol": "Rol",
     "role": "Rolle",
@@ -1331,7 +1331,7 @@
     "second-trimester": "Second trimester",
     "select": "select",
     "select-all": "select-all",
-    "select-none": "select-none",
+    "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
@@ -1340,7 +1340,7 @@
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "A",
     "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-images": "Bilder senden",
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
@@ -1350,7 +1350,7 @@
     "sent-a-audio": "h",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
-    "sent-a-picture": "Envió una imagen",
+    "sent-a-picture": "Ein Bild gesendet",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
@@ -1363,7 +1363,7 @@
     "serierb": "Serie RB",
     "series": "Serie",
     "server": "Server:",
-    "service": "service",
+    "service": "Dienstleistung",
     "services": "services",
     "settings": "Ajustes",
     "settlement": "Abwicklung",
@@ -1465,13 +1465,13 @@
     "supplier-estimation": "Supplier estimation",
     "supplier-estimations": "Supplier estimations",
     "supplier-have-no-iban": "Der Lieferant %%supplier hat keine IBAN (Bankkonto)",
-    "supplier-invoice": "Supplier invoice",
+    "supplier-invoice": "Lieferantenrechnung",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Supplier invoices",
     "supplier-not-found": "supplier-not-found",
     "supplier-order": "Supplier order",
     "supplier-orders": "Lieferantenbestellungen",
-    "supplier-payment-concept": "receipt-payment-concept",
+    "supplier-payment-concept": "Zahlung des Belegs %document%",
     "supplier-products": "Lieferantenprodukte",
     "supplier-reference": "Lieferantenreferenz",
     "suppliers": "Lieferanten",
@@ -1506,7 +1506,7 @@
     "template": "Vorlage",
     "template-error": "template-error",
     "template-not-found": "Vorlage nicht gefunden",
-    "templates": "Plantillas",
+    "templates": "Vorlagen",
     "test": "Test",
     "test-mail-not-implemented": "Der Test des Mail-Controller ist nicht implementiert",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
