--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -337,7 +337,7 @@
     "credit": "Credito",
     "crm": "CRM",
     "cron-job": "cron-job",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "Il cron è stato fermato per non superare il tempo massimo di esecuzione di PHP. Per favore, esegui il cron da terminale per evitare questo limite.",
     "crons": "Cron",
     "currency": "Moneta",
     "currency-position": "Currency position",
@@ -475,7 +475,7 @@
     "document-type": "Tipo di documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
     "document-wildcard-info": "Document indicated in the head of the accounting entry",
-    "document-without-total": "Documento %document% senza totali o con il totale a 0.",
+    "document-without-total": "Documento %document% senza totali o con totale a 0.",
     "documentation": "documentazione",
     "documents": "Documenti",
     "documents-generated": "documenti-generati",
@@ -645,7 +645,7 @@
     "for-sale": "In vendita",
     "foresee": "Prevedere",
     "format": "formato",
-    "formula-cost-price": "formula-cost-price",
+    "formula-cost-price": "prezzo di costo + x% + y",
     "formula-sale-price": "formula-sale-price",
     "formula-to-apply": "Formula da applicare",
     "fourth-quarter": "4º trimestre",
@@ -664,7 +664,7 @@
     "general-data": "informazioni generali",
     "generate": "Generate",
     "generate-accounting-entries": "Generar asientos",
-    "generate-accounting-entry": "generate-accounting-entry",
+    "generate-accounting-entry": "Genera voce contabile",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "Crea Fattura",
     "generate-receipts": "genera-ricevute",
@@ -699,7 +699,7 @@
     "group-by-day": "Raggruppa per giorno",
     "group-by-day-unixtime": "group-by-day-unixtime",
     "group-by-month": "Raggruppa per mese",
-    "group-by-month-unixtime": "group-by-month-unixtime",
+    "group-by-month-unixtime": "Raggruppa per mese (unixtime)",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "raggruppa-per-settimana",
     "group-by-week-unixtime": "Raggruppa per settimana unixtime",
@@ -708,7 +708,7 @@
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome del Gruppo",
     "group-or-split": "Group or split",
-    "group-or-split-p": "group-or-split-p",
+    "group-or-split-p": "Questo assistente consente di generare un nuovo documento dalle righe di altri. Seleziona le quantità che desideri utilizzare, la data del nuovo documento e premi il pulsante generare.",
     "grouping-type": "Agrupación",
     "groups": "gruppi",
     "has-attachments": "Tiene adjuntos",
@@ -742,7 +742,7 @@
     "idaccount": "Id. account",
     "idem-wildcard-info": "Copia il valore della riga precedente",
     "image": "Imagen",
-    "images": "Imágenes",
+    "images": "Immagini",
     "images-added-correctly": "%count% immagini aggiunte correttamente",
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
@@ -770,7 +770,7 @@
     "integrity-check-help": "Questa è una verifica dell'integrità del sistema, descritta come",
     "interest": "Interesse",
     "international-identifier": "Identificatore internazionale",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Intra-comunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Data% 1 $ s non è valida.",
@@ -783,7 +783,7 @@
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Dirección web no válida",
     "invoice": "fattura",
-    "invoice-email-subject": "invoice-email-subject",
+    "invoice-email-subject": "Oggetto email della fattura",
     "invoice-email-text": "testo e-mail fattura",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
     "invoice-have-rectifying-cant-delete": "La fattura ha già una rettifica. Non posso essere cancellato.",
@@ -885,7 +885,7 @@
     "load-def-acc-plan": "carica-piano-conti-predefinito",
     "loading-controller": "Controller di caricamento: '0'",
     "location": "Posizione",
-    "lock-accounting": "lock-accounting",
+    "lock-accounting": "Blocca contabilità",
     "lock-entry": "lock-entry",
     "lock-invoice": "lock-invoice",
     "lock-unlock": "Lock-Unlock",
@@ -899,7 +899,7 @@
     "login-password-fail": "Accesso fallito",
     "login-text": "Accesso",
     "login-to-continue": "login-to-continue",
-    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
+    "login-to-continue-p": "Devi identificarti per continuare con questa azione. Clicca su accedi o crea un account.",
     "login-user-not-found": "Utente non trovato",
     "logo": "logo",
     "logout": "Disconnettersi",
@@ -965,7 +965,7 @@
     "model": "Modelo",
     "model-not-found": "model-not-found",
     "monday": "lunedì",
-    "month": "Mes",
+    "month": "Mese",
     "month-1": "Enero",
     "month-10": "Ottobre",
     "month-11": "Noeviembre",
@@ -1006,7 +1006,7 @@
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
     "new-price": "new-price",
-    "new-refund": "new-refund",
+    "new-refund": "Nuovo rimborso",
     "new-supplier": "new supplier",
     "news": "notizie",
     "next": "Il prossimo",
@@ -1041,7 +1041,7 @@
     "notes": "Gli appunti",
     "notice": "Aviso",
     "notices": "Avvisi",
-    "notification": "Notificación",
+    "notification": "Notifica",
     "notifications": "Notificaciones",
     "november": "Novembre",
     "number": "Numero",
@@ -1067,7 +1067,7 @@
     "opened": "Aperto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
-    "operation": "Operación",
+    "operation": "Operazione",
     "operator": "Operador",
     "option": "opzione",
     "optional": "facoltativo",
@@ -1155,8 +1155,8 @@
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Plugin %pluginName% needed.",
     "plugin-needs-fs-version": "plugin-needs-fs-version",
-    "plugin-not-compatible": "Plugin %pluginName% not compatible with FacturaScripts 2018.",
-    "plugin-order": "Orden: %num%",
+    "plugin-not-compatible": "Il Plugin %pluginName% non è compatibile con FacturaScripts %versione%",
+    "plugin-order": "Ordine: %num%",
     "plugin-phpversion-error": "Il plugin %pluginName% richiede PHP %php% o superiore",
     "plugin-removal-disabled": "plugin-removal-disabled",
     "plugin-unsupported-version": "plugin-unsupported-version",
@@ -1215,7 +1215,7 @@
     "purchase-rate": "Tasso di acquisto",
     "purchased-quantity": "purchased-quantity",
     "purchases": "acquisti",
-    "purchases-subaccount-not-found": "purchases-subaccount-not-found",
+    "purchases-subaccount-not-found": "Conto acquisti non trovato",
     "pvp": "Prezzo al dettaglio",
     "pvp-total": "Total retail price",
     "pvp-unit": "Unit retail price",
@@ -1236,7 +1236,7 @@
     "read-more": "Leggi di più",
     "readonly": "sola lettura",
     "rebuild": "ricostruire",
-    "rebuild-completed": "rebuild-completed",
+    "rebuild-completed": "Ricostruzione completata",
     "rebuild-stock": "rebuild-stock",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
@@ -1261,10 +1261,10 @@
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "refunds",
     "register": "Registrar",
-    "register-installation": "register-installation",
+    "register-installation": "Registra installazione",
     "register-installation-p": "register-installation-p",
     "register-symbol": "#",
-    "registered-installation": "registered-installation",
+    "registered-installation": "Installazione registrata #%number%",
     "registered-installation-p": "registered-installation-p",
     "regularization-operation": "Regularización",
     "reject": "Rechazar",
@@ -1274,7 +1274,7 @@
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "reloading",
     "remove-filter": "remove-filter",
-    "remove-from-list": "remove-from-list",
+    "remove-from-list": "Rimuovi dalla lista",
     "removing-logs-until": "Rimozione log fino al %date%",
     "renew": "renew",
     "renumber": "Renumerar",
@@ -1314,7 +1314,7 @@
     "run": "run",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "I saldi",
-    "sales-invoice": "sales-invoice",
+    "sales-invoice": "Fattura di vendita",
     "sales-rate": "Tasso di vendita",
     "sales-subaccount-not-found": "conto-secondario-vendite-non-trovato",
     "same-group": "Lo stesso gruppo",
@@ -1330,7 +1330,7 @@
     "second-quarter": "2º trimestre",
     "second-trimester": "Second trimester",
     "select": "select",
-    "select-all": "select-all",
+    "select-all": "Seleziona tutto",
     "select-none": "select-none",
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
     "select-user": "Seleziona Utente",
@@ -1341,7 +1341,7 @@
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
-    "send-invoices": "Enviar facturas",
+    "send-invoices": "Invia fatture",
     "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
     "send-mail-error": "send-mail-error",
@@ -1366,7 +1366,7 @@
     "service": "service",
     "services": "servizi",
     "settings": "Ajustes",
-    "settlement": "settlement",
+    "settlement": "Liquidazione",
     "settlement-product": "settlement-product",
     "settlements": "settlements",
     "setup-options": "Opzioni di installazione",
@@ -1378,7 +1378,7 @@
     "short-name": "Nome breve",
     "show": "show",
     "show-balance-graphic": "Mostra grafico del saldo",
-    "show-crm-warnings": "Mostrar avisos CRM",
+    "show-crm-warnings": "Mostra avvisi CRM",
     "show-expired-receipts": "Mostra ricevute scadute",
     "show-month-stats": "Mostra statistiche mensili",
     "show-pending-remittances": "Mostrar remesas pendientes",
@@ -1417,7 +1417,7 @@
     "start-time": "start-time",
     "starting-cron": "A partire FacturaScripts Cron ...",
     "state": "Stato",
-    "states": "states",
+    "states": "Stati",
     "status": "Stato",
     "status-document": "Documento di stato",
     "status-name-valid-length": "Nome dello stato non valido. Deve essere compreso tra 1 e 20 caratteri.",
@@ -1464,7 +1464,7 @@
     "supplier-delivery-notes": "Supplier delivery notes",
     "supplier-estimation": "Supplier estimation",
     "supplier-estimations": "Supplier estimations",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
     "supplier-invoice": "Supplier invoice",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
@@ -1515,7 +1515,7 @@
     "third-quarter": "3º trimestre",
     "third-trimester": "Third trimester",
     "this-last-fortnight": "Ultimi 15 giorni",
-    "this-last-month": "Ultimo mese",
+    "this-last-month": "Questo ultimo mese",
     "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
     "this-month": "this-month",
@@ -1537,7 +1537,7 @@
     "total": "Totale",
     "total-amount": "total-amount",
     "total-cost": "total-cost",
-    "total-purchases": "total-purchases",
+    "total-purchases": "Acquisti totali",
     "total-sales": "total-sales",
     "total-value-error": "Quantità totale di 0 1 non corretta (2). Importo corretto: 3",
     "total-with-taxes": "Total with taxes",
@@ -1561,8 +1561,8 @@
     "type-debug": "Tipo debug",
     "type-emergency": "Type emergency",
     "type-error": "Type error",
-    "type-info": "Type info",
-    "type-notice": "Type notice",
+    "type-info": "Tipo informazioni",
+    "type-notice": "Tipo di avviso",
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
@@ -1571,7 +1571,7 @@
     "under-minimums": "under-minimums",
     "undo": "Disfare",
     "unit-profit": "unit-profit",
-    "unit-purchase-price": "unit-purchase-price",
+    "unit-purchase-price": "Prezzo unitario di acquisto.",
     "unit-sale-price": "prezzo di vendita unitario",
     "unlimited": "Illimitato",
     "unlink": "Desvincular",
@@ -1583,7 +1583,7 @@
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
     "update": "update",
-    "update-stock": "Update stock",
+    "update-stock": "Aggiorna stock",
     "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "update-time",
     "updated-model": "Aggiornato %model% (%key%) %desc%",
@@ -1623,7 +1623,7 @@
     "verified": "verified",
     "version": "versione",
     "video": "Video",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "Il numero '%vat-number%' è registrato nel sistema VIES",
     "view-api": "Visualizza API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Vedi citazione",
@@ -1645,7 +1645,7 @@
     "wildcard-general-info": "Verrà sostituito dal valore corrispondente",
     "wildcard-title": "Wildcard sostituibili per valore",
     "without-closure": "without-closure",
-    "without-domicile": "without-domicile",
+    "without-domicile": "Senza domicilio",
     "without-groups": "Senza gruppo",
     "without-regularization": "without-regularization",
     "without-tax": "Senza tasse",
