--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -2,7 +2,7 @@
     "abbreviated": "Abreviado",
     "about": "Acerca de",
     "accept": "Aceptar",
-    "accept-all": "Aceptar todo",
+    "accept-all": "Akceptuj wszystko",
     "accept-data": "Aceptar cambios u operación",
     "accept-privacy-policy": "Acepta la política de privacidad",
     "accepted": "Aceptado",
@@ -64,7 +64,7 @@
     "administrator": "Administrador",
     "adult": "Adulto",
     "advanced": "Avanzado",
-    "agent": "Agente",
+    "agent": "Agent",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
     "agents": "Agentes",
@@ -84,7 +84,7 @@
     "allow-import": "Permitir importar",
     "allow-marketing": "Permite marketing",
     "allow-post-data": "Permitir MODIFICAR",
-    "allow-put-data": "Permitir AÑADIR",
+    "allow-put-data": "Zezwól na DODAWANIE",
     "allow-sale-without-stock": "Permitir venta sin stock",
     "allow-sale-without-stock-n": "Permitir la venta sin stock en nuevos productos",
     "allow-update": "Permitir modificar",
@@ -95,7 +95,7 @@
     "any": "Cualquier",
     "any-group": "Dowolna grupa",
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
-    "apc-clear": "APC limpiado.",
+    "apc-clear": "APC wyczyszczone.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
     "apc-get-key-item": "Obtenido elemento '%item%' desde APC.",
     "apc-set-key-item": "Asignado elemento '%item%' a APC.",
@@ -128,9 +128,9 @@
     "audio": "Audio",
     "august": "Agosto",
     "auth-token-invalid": "Clave de API no válida",
-    "authentication": "Autenticación",
+    "authentication": "Uwierzytelnienie",
     "auto": "Auto",
-    "auto-apply-to": "Aplicar automáticamente a",
+    "auto-apply-to": "Automatycznie zastosuj do",
     "automatic": "Automático",
     "available": "Disponible",
     "average": "Średnia",
@@ -217,7 +217,7 @@
     "cc": "CC",
     "center": "Centro",
     "change": "Cambiar",
-    "channel": "Canal",
+    "channel": "Kanał",
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
@@ -363,10 +363,10 @@
     "customer-payment-concept": "Cobro del recibo %document%",
     "customer-reached-maximum-risk": "El cliente ha superado su riesgo máximo",
     "customer-subaccount-p": "Indique una subcuenta a usar o deje el campo en blanco para asignar una automáticamente",
-    "customers": "Clientes",
+    "customers": "Klienci",
     "customize": "Personalizar",
     "daily": "Diario",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
+    "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
     "dashboard": "Tablica",
@@ -390,7 +390,7 @@
     "days-log-retention": "Liczba dni retencji logów",
     "days-until-expiration": "Días hasta vencimiento",
     "db-host": "Host base de datos",
-    "db-name": "Nombre de base de datos",
+    "db-name": "Nazwa bazy danych",
     "db-password": "Contraseña base de datos",
     "db-port": "Puerto base de datos",
     "db-type": "Tipo de servidor SQL",
@@ -408,7 +408,7 @@
     "default-tax": "Impuesto predeterminado",
     "default-to-company-email": "Por defecto al email de la empresa",
     "default-to-user-email": "Por defecto al email del usuario",
-    "default-warehouse": "Almacén predefinido",
+    "default-warehouse": "Domyślny magazyn",
     "delete": "Eliminar",
     "delete-all": "Eliminar todo",
     "delete-closing": "Eliminar asientos de cierre",
@@ -439,11 +439,11 @@
     "desc-provider-name": "Nombre por el que es conocido el proveedor. Para uso interno.",
     "desc-rate-code": "Código para uso interno de la tarifa.",
     "desc-vat-document": "Identificador del documento donde se aplica el impuesto",
-    "description": "Descripción",
+    "description": "Opis",
     "description-1": "Descripción 1",
     "description-2": "Descripción 2",
     "description-3": "Descripción 3",
-    "description-4": "Descripción 4",
+    "description-4": "Opis 4",
     "description-4ba": "Descripción 4ba",
     "description2": "Descripción 2",
     "description3": "Descripción 3",
@@ -516,7 +516,7 @@
     "emails-sent": "Emails enviados",
     "employee": "Empleado",
     "employees": "Empleados",
-    "empty": "Vacío",
+    "empty": "Pusty",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
     "enable": "Activar",
@@ -543,7 +543,7 @@
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
     "error-reading-file": "Error al leer el archivo '%fileName%'",
     "error-saving-lines": "Error al guardar las líneas",
-    "error-saving-stock": "¡Error al guardar el stock!",
+    "error-saving-stock": "Błąd podczas zapisywania zapasów!",
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
     "errors": "Errores",
@@ -652,7 +652,7 @@
     "fourth-trimester": "Cuarto trimestre",
     "free": "Gratis",
     "friday": "Viernes",
-    "from": "Desde",
+    "from": "Od",
     "from-accounting-entry": "Desde asiento",
     "from-date": "Desde",
     "from-subaccount": "Desde subcuenta",
@@ -786,7 +786,7 @@
     "invoice-email-subject": "Su factura %code%",
     "invoice-email-text": "Estimado cliente,  A continuación le adjuntamos la factura correspondiente a los servicios prestados. Si tienes cualquier consulta puede responder a este mismo email.  ¡Muchas gracias! Un saludo,",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
-    "invoice-have-rectifying-cant-delete": "La factura ya tiene una rectificativa. No se puede eliminar.",
+    "invoice-have-rectifying-cant-delete": "Faktura ma już korektę. Nie można jej usunąć.",
     "invoice-new-assigned-date": "Ya hay facturas posteriores a la fecha seleccionada (%oldDate%). Nueva fecha asignada: %newDate%",
     "invoice-number": "Número de factura",
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
@@ -806,7 +806,7 @@
     "is-person": "Persona física",
     "iso": "ISO",
     "issued": "Emitido",
-    "item-limit": "Elementos por página",
+    "item-limit": "Elementy na stronę",
     "items-added-correctly": "%num% elementos añadidos correctamente",
     "items-removed-correctly": "%num% elementos quitados correctamente",
     "ivarep-subaccount-not-found": "Subcuenta de IVA repercutido no encontrada",
@@ -852,9 +852,9 @@
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
     "last-ip": "Ostatni adres IP",
-    "last-month": "El mes pasado",
+    "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Último precio de presupuesto",
-    "last-price-sale": "Último precio de venta",
+    "last-price-sale": "Ostatnia cena sprzedaży",
     "last-purchase-price": "Último precio de compra",
     "last-quarter": "El pasado cuatrimestre",
     "last-semester": "El pasado semestre",
@@ -879,7 +879,7 @@
     "license": "Licencia",
     "like-than": "Igual que",
     "line": "Línea",
-    "lines": "Lineas",
+    "lines": "Linie",
     "linux": "Linux",
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
@@ -892,7 +892,7 @@
     "lock-unlock-account-entry": "Bloquear\/Desbloquear el asiento contable",
     "locked": "Bloqueado",
     "log": "Log",
-    "login": "Iniciar sesión",
+    "login": "Zaloguj się",
     "login-cookie-fail": "Cookie de sesión no válida",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
@@ -947,7 +947,7 @@
     "memcache-set-key-item": "Asignado elemento '%item%' a Memcache.",
     "menu": "Menú",
     "message": "Mensaje",
-    "messages-component-title": "Avisos y mensajes",
+    "messages-component-title": "Komunikaty i wiadomości",
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
     "method-payment": "Forma de pago",
     "mime-type": "Mime Type",
@@ -999,7 +999,7 @@
     "negative-balance": "Saldo negativo",
     "net": "Neto",
     "new": "Nuevo",
-    "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
+    "new-acc-entry-line-p": "Wprowadzisz linię, wpisując poniżej kod podkonta lub naciskając przycisk podkonta i wybierając podkonto.",
     "new-address": "Nueva dirección",
     "new-customer": "nuevo cliente",
     "new-customers": "Nuevos clientes",
@@ -1021,7 +1021,7 @@
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Brak odniesienia",
     "no-selected-item": "Ningún elemento seleccionado",
-    "no-stock": "No controlar stock",
+    "no-stock": "Brak kontrolowania zapasów",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
@@ -1036,7 +1036,7 @@
     "not-valid-email": "Email %email% no válido",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
     "not-valid-image": "To nie jest prawidłowy obraz",
-    "not-valid-percentage-retention": "Porcentaje no válido. Debe ser mayor de 0.00",
+    "not-valid-percentage-retention": "Nieprawidłowy procent. Musi być większy niż 0.00",
     "note": "Nota",
     "notes": "Notas",
     "notice": "Aviso",
@@ -1308,7 +1308,7 @@
     "right": "Derecha",
     "risky-customer": "Cliente con riesgo",
     "rol": "Grupo",
-    "role": "Grupo",
+    "role": "Grupa",
     "roles": "Grupos",
     "rules": "Reglas",
     "run": "Ejecutar",
@@ -1319,7 +1319,7 @@
     "sales-subaccount-not-found": "Subcuenta de ventas no encontrada",
     "same-group": "Mismo grupo",
     "saturday": "Sábado",
-    "save": "Guardar",
+    "save": "Zapisz",
     "save-data": "Guardar datos",
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
@@ -1359,7 +1359,7 @@
     "serial-number": "Número de Serie",
     "serie": "Serie",
     "serieb": "Serie B",
-    "serier": "Serie R",
+    "serier": "Seria R",
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Servidor",
@@ -1383,9 +1383,9 @@
     "show-month-stats": "Mostrar estadísticas mensuales",
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Pokaż cenę w druku",
-    "show-quantity": "Mostrar cantidad en la impresión",
+    "show-quantity": "Pokaż ilość w druku",
     "show-section-new": "Pokaż nową sekcję",
-    "signature": "Firma",
+    "signature": "Podpis",
     "simple": "Simple",
     "simplified": "Uproszczona",
     "size": "Tamaño",
@@ -1435,7 +1435,7 @@
     "sub-type": "Subtipo",
     "subaccount": "Subcuenta",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
-    "subaccount-belongs-other-year": "La subcuenta %subAccountCode% pertenece a otro ejercicio.",
+    "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
     "subaccount-irpf": "Cuenta para retenciones",
     "subaccount-irpf-creditor": "Cuenta del acreedor de IRPF",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
@@ -1471,7 +1471,7 @@
     "supplier-not-found": "Proveedor no encontrado",
     "supplier-order": "Pedido de Proveedor",
     "supplier-orders": "Zamówienia od dostawców",
-    "supplier-payment-concept": "Pago del recibo %document%",
+    "supplier-payment-concept": "Płatność dokumentu %document%",
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Proveedores",
@@ -1500,7 +1500,7 @@
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Cuenta de débito para impuestos",
     "tax-transport": "Impuestos del transporte",
-    "taxes": "Impuestos",
+    "taxes": "Podatki",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
     "telephone-prefix": "Prefiks telefoniczny",
     "template": "Plantilla",
@@ -1567,7 +1567,7 @@
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
     "unbalanced-entry": "Asiento descuadrado",
-    "unchecked": "No comprobado",
+    "unchecked": "Niezweryfikowany",
     "under-minimums": "Bajo mínimos",
     "undo": "Deshacer",
     "unit-profit": "Beneficio unit.",
