--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -143,7 +143,7 @@
     "balance": "Equilíbrio",
     "balance-account": "Balance account",
     "balance-account-abreviated": "Balance account abreviated",
-    "balance-amounts": "Trial Balance",
+    "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balance Sheet",
     "balance-sheets": "Balance Sheets",
     "balances": "Balanços",
@@ -331,7 +331,7 @@
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
-    "created": "Created",
+    "created": "Criado",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Credit",
@@ -495,7 +495,7 @@
     "duplicate-record": "duplicate-record",
     "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "duplicated-request",
-    "duration": "duration",
+    "duration": "Duração",
     "edit": "Editar",
     "editable": "Editable",
     "email": "O email",
@@ -675,7 +675,7 @@
     "generated-accounts": "0 contas geradas.",
     "generated-agents": "0 agentes gerados.",
     "generated-at": "Generated at %when%",
-    "generated-contacts": "generated-contacts",
+    "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
     "generated-customer-estimations": "0 estimativas de clientes geradas.",
     "generated-customer-groups": "0 grupos de clientes gerados.",
@@ -725,7 +725,7 @@
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
     "hide": "hide",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "Historial",
@@ -754,7 +754,7 @@
     "in-stock": "in-stock",
     "inactive": "Inativo",
     "income-and-expenses": "Income and Expenses",
-    "incompatible-document": "incompatible-document",
+    "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Info",
@@ -931,7 +931,7 @@
     "mark-as-homepage": "Marque como página inicial",
     "marked-as-homepage": "M",
     "max-input-vars-warning": "max-input-vars-warning",
-    "max-risk": "max-risk",
+    "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoque máximo",
@@ -969,7 +969,7 @@
     "month-1": "Enero",
     "month-10": "Octubre",
     "month-11": "Novembro",
-    "month-12": "Diciembre",
+    "month-12": "Dezembro",
     "month-2": "Fevereiro",
     "month-3": "Marzo",
     "month-4": "Abril",
@@ -1013,7 +1013,7 @@
     "nick": "usuario",
     "no": "Não",
     "no-data": "Sem dados",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "N",
     "no-invoice": "no-invoice",
@@ -1112,7 +1112,7 @@
     "pay": "pay",
     "pay-with-card": "pay-with-card",
     "payment": "Pagamento",
-    "payment-date": "payment-date",
+    "payment-date": "Data de pagamento",
     "payment-days": "Dias de pagamento",
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de Pagamento",
@@ -1123,7 +1123,7 @@
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pending",
-    "pending-invoices-button": "Risco:",
+    "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
@@ -1209,7 +1209,7 @@
     "projects": "Projetos",
     "provider-reference": "Referência do provedor",
     "province": "Província",
-    "provinces": "provinces",
+    "provinces": "províncias",
     "public": "Público",
     "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
@@ -1224,7 +1224,7 @@
     "quantity": "Quantidade",
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Cantidad restante",
-    "quantity-served": "quantity-served",
+    "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
@@ -1259,7 +1259,7 @@
     "refresh-page": "Atualizar a página",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Reembolso do documento %document%",
-    "refunds": "refunds",
+    "refunds": "Reembolsos",
     "register": "Registrar",
     "register-installation": "register-installation",
     "register-installation-p": "register-installation-p",
@@ -1283,7 +1283,7 @@
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
@@ -1297,7 +1297,7 @@
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reserved",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
-    "resource": "Resource",
+    "resource": "Recurso",
     "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
@@ -1347,7 +1347,7 @@
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
+    "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
@@ -1436,7 +1436,7 @@
     "subaccount": "Subcontas",
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
-    "subaccount-irpf": "Account for deductions",
+    "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
@@ -1445,7 +1445,7 @@
     "subaccounts": "Subcontas",
     "subfamilies": "s",
     "subject": "Assunto",
-    "subtotal": "subtotal",
+    "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "success",
     "sum": "Suma",
@@ -1565,7 +1565,7 @@
     "type-notice": "Type notice",
     "type-success": "type-success",
     "type-warning": "Type warning",
-    "unbalance": "Unbalance",
+    "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
@@ -1601,14 +1601,14 @@
     "using-filecache": "Usando Filecache",
     "using-memcache": "Usando Memcache",
     "valid-for-day": "Válido para un día",
-    "validate": "validate",
+    "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "value-x",
     "value-y": "value-y",
     "values": "values",
-    "variables": "Variables",
+    "variables": "Variáveis",
     "variant": "Variant",
     "variants": "Variantes",
     "vat": "CUBA",
@@ -1630,7 +1630,7 @@
     "view-order": "Ver encomenda",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
-    "warehouse-must-be-same-business": "warehouse-can-be-same-business",
+    "warehouse-must-be-same-business": "O armazém de origem e destino devem ser da mesma empresa",
     "warehouses": "Armazéns",
     "warning": "<b> Atenção <\/ b>",
     "warnings": "Avisos",
@@ -1652,7 +1652,7 @@
     "without-taxation": "Sem tributação",
     "wizard": "wizard",
     "wizard-p": "wizard-p",
-    "wizard-plugins": "wizard-plugins",
+    "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
