--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -962,7 +962,7 @@
     "missing-file": "Falta el fitxer",
     "missing-file-help": "Pareix que este fitxer no està en la teua instalació. Potser no l'uses, pero <em>no el pots borrar<\/em>.",
     "mobile": "mobile",
-    "model": "Modelo",
+    "model": "Model",
     "model-not-found": "El model %model% no s'ha trobat",
     "monday": "monday",
     "month": "Mes",
@@ -1106,7 +1106,7 @@
     "passenger": "Pasajero",
     "password": "Contrasenya",
     "pattern": "Patró",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "El patró triat no inclou número, per tant és molt probable que generi codis duplicats.",
     "pattern-without-serie": "El patró triat no inclou sèrie, per la qual cosa és possible que generi codis duplicats per a cada sèrie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Pagar",
@@ -1232,7 +1232,7 @@
     "re": "RE",
     "re-open": "Reobrir",
     "react": "Reaccionar",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Llegit per %nick% el %date%",
     "read-more": "Leer más",
     "readonly": "Només lectura",
     "rebuild": "Reconstruir",
