--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -143,7 +143,7 @@
     "balance": "Equilíbrio",
     "balance-account": "Saldo em conta",
     "balance-account-abreviated": "Conta de saldo abreviada",
-    "balance-amounts": "Trial Balance",
+    "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balance Sheet",
     "balance-sheets": "Balance Sheets",
     "balances": "Balanços",
@@ -278,7 +278,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Informações de comissão da empresa",
-    "company-manager": "Gerente de empresa",
+    "company-manager": "Gerente da empresa",
     "company-name": "Nome da empresa",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
@@ -303,7 +303,7 @@
     "contract": "contrato",
     "contracts": "contratos",
     "control-panel": "Painel de controle",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Aviso: esta mudança será aplicada aos preços dos produtos, mas também aos totais de faturas, lançamentos, etc.",
     "controller": "Controlador",
     "controller-error": "Erro de Controlador",
     "controller-not-found": "Controlador não encontrado",
@@ -320,7 +320,7 @@
     "correct": "Correto",
     "cost": "Coste",
     "cost-price": "Preço de custo",
-    "cost-price-policy": "cost-price-policy",
+    "cost-price-policy": "Política de preço de custo",
     "counterpart": "Offsetting",
     "countries": "Países",
     "country": "País",
@@ -331,7 +331,7 @@
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
-    "created": "Created",
+    "created": "Criado",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
     "credit": "Credit",
@@ -492,10 +492,10 @@
     "drag": "Arrastar",
     "dto": "Disco.",
     "dto-2": "dto-2",
-    "duplicate-record": "duplicate-record",
+    "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "duplicated-request",
-    "duration": "duration",
+    "duration": "Duração",
     "edit": "Editar",
     "editable": "Editable",
     "email": "O email",
@@ -543,7 +543,7 @@
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
     "error-saving-lines": "Erro ao salvar as linhas",
-    "error-saving-stock": "¡Erro ao economizar estoque!",
+    "error-saving-stock": "Erro ao salvar o estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
     "errors": "Erros",
@@ -601,7 +601,7 @@
     "fax": "Fax",
     "february": "Fevereiro",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
-    "field-required": "Campo requerido: %field%",
+    "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
@@ -626,7 +626,7 @@
     "finished-cron": "Cron do FacturaScripts concluído, tempo decorrido: %timeNeeded%",
     "first-quarter": "Primeiro trimestre",
     "first-steps": "f",
-    "first-trimester": "First trimester",
+    "first-trimester": "Primeiro trimestre",
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id.",
@@ -675,7 +675,7 @@
     "generated-accounts": "0 contas geradas.",
     "generated-agents": "0 agentes gerados.",
     "generated-at": "Generated at %when%",
-    "generated-contacts": "generated-contacts",
+    "generated-contacts": "%quantity% contatos gerados.",
     "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
     "generated-customer-estimations": "0 estimativas de clientes geradas.",
     "generated-customer-groups": "0 grupos de clientes gerados.",
@@ -725,7 +725,7 @@
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
     "hide": "ocultar",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Preço de compra mais alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
     "hint-vat-register": "View\/Modify VAT registration",
     "history": "Histórico",
@@ -738,7 +738,7 @@
     "i-forgot-password": "esqueci-senha",
     "iban": "IBAN",
     "icon": "icon",
-    "id": "Identidade.",
+    "id": "Id.",
     "idaccount": "Identidade. Conta",
     "idem-wildcard-info": "Copy the value of the previous line",
     "image": "Imagem",
@@ -787,7 +787,7 @@
     "invoice-email-text": "Olá, vai anexa a sua fatura %code%",
     "invoice-has-no-receipts": "A fatura não tem recibos. Crie um na aba de recibos.",
     "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
-    "invoice-new-assigned-date": "Há invocados com maior data (0). Nova data atribuída: 1",
+    "invoice-new-assigned-date": "Já existem faturas com data superior a (%oldDate%). Nova data atribuída: %newDate%",
     "invoice-number": "Número da factura",
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
@@ -931,7 +931,7 @@
     "mark-as-homepage": "Marque como página inicial",
     "marked-as-homepage": "M",
     "max-input-vars-warning": "max-input-vars-warning",
-    "max-risk": "max-risk",
+    "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoque máximo",
@@ -1013,7 +1013,7 @@
     "nick": "usuario",
     "no": "Não",
     "no-data": "Sem dados",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
@@ -1089,7 +1089,7 @@
     "page-configuration": "Página de Configuraç",
     "page-not-found": "Página não encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
-    "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
+    "page-option-info": "Aqui você pode modificar os campos visíveis neste listagem ou formulário",
     "page-total-amount": "Total da página",
     "pagename": "Nome da página",
     "pages": "Páginas",
@@ -1110,9 +1110,9 @@
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
-    "pay-with-card": "pay-with-card",
+    "pay-with-card": "Pagar com cartão",
     "payment": "Pagamento",
-    "payment-date": "payment-date",
+    "payment-date": "Data de pagamento",
     "payment-days": "Dias de pagamento",
     "payment-method": "Método de pagamento",
     "payment-methods": "Métodos de Pagamento",
@@ -1123,7 +1123,7 @@
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
     "pending": "pendente",
-    "pending-invoices-button": "Risco:",
+    "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
@@ -1209,7 +1209,7 @@
     "projects": "Projetos",
     "provider-reference": "Referência do provedor",
     "province": "Província",
-    "provinces": "provinces",
+    "provinces": "províncias",
     "public": "Público",
     "public-key": "Clave pública",
     "purchase-rate": "Taxa de compra",
@@ -1224,7 +1224,7 @@
     "quantity": "Quantidade",
     "quantity-abb": "quantity-abb",
     "quantity-remaining": "Cantidad restante",
-    "quantity-served": "quantity-served",
+    "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "randomizer-generating-more-items",
     "rate": "rate",
@@ -1259,7 +1259,7 @@
     "refresh-page": "Atualizar a página",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Reembolso do documento %document%",
-    "refunds": "refunds",
+    "refunds": "Reembolsos",
     "register": "Registrar",
     "register-installation": "register-installation",
     "register-installation-p": "register-installation-p",
@@ -1283,7 +1283,7 @@
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumerar as entradas por data, de menor para maior",
     "renumber-invoices-p": "Renumerar as faturas com base na data, de menor para maior",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
     "repeat-password": "Repetir senha",
     "reply": "Resposta",
@@ -1292,12 +1292,12 @@
     "report-non-grouping-account": "Non group by account",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
-    "request-sent": "request-sent",
+    "request-sent": "Solicitação enviada",
     "required": "obrigatório",
     "requires-core": "Requer FacturaScripts %version%",
     "reserved": "Reserved",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
-    "resource": "Resource",
+    "resource": "Recurso",
     "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
@@ -1347,7 +1347,7 @@
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Enviar vídeos",
-    "sent-a-audio": "Envió un audio",
+    "sent-a-audio": "Enviou um áudio",
     "sent-a-document": "Enviou um documento",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
@@ -1355,7 +1355,7 @@
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
-    "sequences": "sequences",
+    "sequences": "Sequências",
     "serial-number": "Número de Série",
     "serie": "Série",
     "serieb": "Série B",
@@ -1402,7 +1402,7 @@
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-desc": "Ordenado decrescente",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
@@ -1436,7 +1436,7 @@
     "subaccount": "Subcontas",
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
-    "subaccount-irpf": "Account for deductions",
+    "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
@@ -1445,12 +1445,12 @@
     "subaccounts": "Subcontas",
     "subfamilies": "s",
     "subject": "Assunto",
-    "subtotal": "subtotal",
+    "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "success",
     "sum": "Soma",
-    "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
-    "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
+    "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
+    "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
     "summary": "Summary",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "domingo",
@@ -1476,7 +1476,7 @@
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
     "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subconta de imposto de suporte",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
@@ -1565,7 +1565,7 @@
     "type-notice": "Type notice",
     "type-success": "type-success",
     "type-warning": "Type warning",
-    "unbalance": "Unbalance",
+    "unbalance": "Desequilíbrio",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
@@ -1608,7 +1608,7 @@
     "value-x": "value-x",
     "value-y": "value-y",
     "values": "values",
-    "variables": "Variables",
+    "variables": "Variáveis",
     "variant": "Variant",
     "variants": "Variantes",
     "vat": "CUBA",
@@ -1630,7 +1630,7 @@
     "view-order": "Ver encomenda",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
-    "warehouse-must-be-same-business": "warehouse-can-be-same-business",
+    "warehouse-must-be-same-business": "O armazém de origem e destino devem ser da mesma empresa",
     "warehouses": "Armazéns",
     "warning": "<b> Atenção <\/ b>",
     "warnings": "Avisos",
@@ -1652,7 +1652,7 @@
     "without-taxation": "Sem tributação",
     "wizard": "wizard",
     "wizard-p": "wizard-p",
-    "wizard-plugins": "wizard-plugins",
+    "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
